[Add] [Update] material calendar 구현을 위한 EventDecorator class 추가, CalendarFragment 수정을 통해 달력의 지정한 날짜에 원하는 색의 점을 찍을 수 있도록 함. 어떠한 날짜를 클릭하면 toast 메시지를 띄우드록 함.

--- a/MediaFIT-master/Exercise_Helper/app/build.gradle
+++ b/MediaFIT-master/Exercise_Helper/app/build.gradle
@@ -141,6 +141,11 @@ dependencies {
     implementation "com.kakao.sdk:v2-link:2.8.5" // 메시지(카카오링크)
     implementation "com.kakao.sdk:v2-navi:2.8.5" // 카카오내비
 
+
+    //material calendar
+    implementation "com.github.prolificinteractive:material-calendarview:2.0.1"
+    implementation "com.jakewharton.threetenabp:threetenabp:1.2.0"
+
 }
 configurations {
     // Resolves dependency conflict caused by some dependencies use
