--- a/MediaFIT-master/Exercise_Helper/build.gradle
+++ b/MediaFIT-master/Exercise_Helper/build.gradle
@@ -17,6 +17,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/'}
+        //material calendar
+        maven { url 'https://jitpack.io' }
     }
 }
 
